--- a/作业/商品累计/商品累计_mod.html
+++ b/作业/商品累计/商品累计_mod.html
@@ -86,14 +86,9 @@
 	let ul = document.getElementsByClassName('list');
 	let lis = document.getElementsByTagName('li');
 
-	// let spanZong = document.getElementsByTagName('span');
-
 	let bottom = document.getElementById('info');
 	let spans = bottom.getElementsByTagName('span');
 	let ems = bottom.getElementsByTagName('em');
-
-
-	
 	
 	for (let i=0;i<lis.length;i++){
 		fn(lis[i])
@@ -107,6 +102,7 @@
 		let xiaoji = li.getElementsByTagName('strong')[1];
 
 		let n = Number(_em.innerHTML);
+        console.log("n:", n);
 		let m = parseFloat(danjia.innerHTML);
 
 		btns[0].onclick = function(){
@@ -115,44 +111,45 @@
 		
 		_em.innerHTML = n;
 		xiaoji.innerHTML = n*m + '元';
-		
-		ems[0] = '';
-		ems[0].innerHTML = Number(_em.innerHTML);
-
-		ems[1] = 0;
-		ems[1].innerHTML = m*n;
-
-		
 		}	
 
 		btns[1].onclick =function(){
 			n++;
 
-		_em.innerHTML = n;
-		xiaoji.innerHTML = n*m + '元';	
-		
-		
-		ems[0] = '';
-		ems[0].innerHTML = Number(_em.innerHTML);
+	        console.log("n:", n);
 
-		
-		ems[1] = 0;
-		ems[1].innerHTML = Number(parseFloat(xiaoji.innerHTML));
+			_em.innerHTML = n;
+			xiaoji.innerHTML = n*m + '元';	
 			
-		let max = 0;
-		if(parseFloat(danjia.innerHTML)> max){
-			max =parseFloat(danjia.innerHTML);
-			ems[2].innerHTML = max;
-			max = 0;
-		}
 			
+			ems[0] = '';
+			ems[0].innerHTML = Number(_em.innerHTML);
+			
+			let totalCount = 0;
+			let totalPrice = 0;
+			for (let i = 0; i < lis.length; ++i) {
+				let li = lis[i];
+
+				let count = li.getElementsByTagName('em')[0].innerHTML;
+				let price = li.getElementsByTagName('strong')[0].innerHTML.replace("元", "");
+				let total = li.getElementsByTagName('strong')[1].innerHTML.replace("元", "");
+				console.log("count: ", count, "price: ", price, "total: ", total);
+
+				totalCount += Number(count);
+				totalPrice += price * count;
+			}
+
+			ems[0].innerHTML = totalCount;
+			ems[1].innerHTML = totalPrice;
 		}
 	}	
 
 
 	
 
-	
+	// ems.onclick = function(){
+
+	// }
 	
 			
 	
