--- a/2018-11-20/10_移行幻影大法.html
+++ b/2018-11-20/10_移行幻影大法.html
@@ -48,6 +48,8 @@
             if(onOff){
                 num ++;
                 onOff = false;
+                console.log(num);
+                
             }
             div.style.left = ev.pageX - disX + 'px';
             div.style.top = ev.pageY - disY + 'px';
