--- a/练习/移形换影大法.html
+++ b/练习/移形换影大法.html
@@ -28,7 +28,37 @@
     <div id="box"></div>
 
 <script>
-const box = document.getElementById('box')
+const box = document.getElementById('box');
+let disX = 0;
+let disY = 0;
+
+
+box.onmousedown = function(ev){
+    disX = ev.pageX - box.offsetLeft;
+    disY = ev.pageY - box.offsetTop;
+
+    let div = document.createElement('div');
+    div.className = 'y';
+    div.style.left = box.offsetLeft + 'px';
+    div.style.top = box.offsetTop + 'px';
+    body.appendChild(div);
+
+    document.onmousemove = function(ev){
+      
+        div.style.left = ev.pageX - disX + 'px';
+        div.style.top = ev.pageY - disY + 'px';
+    }
+
+    document.onmouseup = function(){
+        box.style.left = div.style.left;
+        box.style.top = div.style.top;
+
+        div.remove();
+        document.onmouseup = document.onmousemove = null;
+
+    }
+    return false;
+}
 </script>
     
 </body>
